index.css
.center-facebook {
    justify-content: space-between;
    /*    align-items: center;*/
    /*    display: flex;*/
    color: white;
    /*
    height: 70px;
    width: 400px;
    background-color: bisque;
*/
}

.modal-content {
    /*     */
    width: 100%;
    max-width: 502px;
    background-color: #007bff;
    color: white;
}

.modal-header {
    border: 0;
}

.modal-body {
    padding: 0;
}

.close {
    float: right;
    font-size: 1.5rem;
    font-weight: 700;
    line-height: 1;
    color: white;
    text-shadow: none;
    opacity: 1;
}

body {
    background: -webkit-linear-gradient(top, #7b7b7b 0%, rgba(143, 143, 143, 0) 40%);
    background-attachment: fixed;
}

hr {
    margin: 20px;
}

#facebk {
    width: 300px;
    height: 500px;
    position: absolute;
    top: 33px;
    margin: 0 auto;
    z-index: 33333333;
    background-color: aqua;
}

#inchide {
    background-color: black;
    color: white;
}

h2.display-6 {
    font-weight: 100;
}

.parent-center {
    text-align: center;
}

.left-button {
    border-top-left-radius: 30px;
    border-bottom-left-radius: 30px;
}

.right-button {
    border-top-right-radius: 30px;
    border-bottom-right-radius: 30px;
}

.center {
    display: flex !important;
    justify-content: center !important;
}

.basetop {
    background-color: #1a762f;
    height: 10vh;
}

.maincontent {
    margin-top: -45vh;
}

.jumbotron {
    /*    background-color: #28a745;*/
    padding: 0px 0px 65vh 0px;
    /*    height: 100vh;*/
    margin-bottom: 0px;
    border-radius: 0;
    color: white;
    background-image: -webkit-linear-gradient(top, #1a762f 10vh, rgba(26, 118, 47, 0) 90%), url('assets/landscape.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    /*    text-shadow: 1px 2px 30px #343434;*/
}

#list-example {
    padding-top: 15px;
}

.capitol .row {
    padding: 0 10px;
}

.left {
    float: left;
}

.right {
    float: right;
}

.headpicture_mobile {
    display: none;
}

.google-maps {
    position: relative;
    padding-bottom: 75%;
    /*This is the aspect ratio*/
    height: 0;
    overflow: hidden;
}

.google-maps iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100% !important;
    height: 100% !important;
}

body {
    background-color: #e0e0e0;
    position: relative;
}

.topbar {
    /*
    background-color: white;
    border-bottom: 1px solid lightgray;
*/
}

ul.navigation {
    float: left;
    margin: 0px;
    padding: 10px 0;
}

ul.navigation li {
    display: inline;
    list-style: none;
    margin-right: 30px;
    font-size: 25px;
    color: white;
    text-shadow: 3px 4px 15px rgb(41, 39, 39);
    font-weight: 600;
}

.jumbotron img {
    margin-top: 10px;
    width: 125px;
    margin-bottom: 10px;
}

ul#fbbutton {
    float: right;
    margin: 0px;
    padding: 22px 0 10px 0;
}

ul#fbbutton li {
    display: inline;
    list-style: none;
}

.topbar:after,
footer:after {
    content: '';
    display: block;
    clear: both;
}

#logo img {
    height: 50px;
    margin-bottom: 20px;
}

.list-group {
    /*    position: fixed;*/
}

.text-box-area {
    margin-top: 15px;
    background-color: #f6f6f6;
    border: 1px solid lightgray;
    border-radius: 5px;
    padding: 15px 20px;
}

footer {
    margin-top: 30px;
    padding: 20px 0;
    /*    height: 400px;*/
    background-color: #007bff;
    color: white;
}

footer p {
    padding-top: 20px;
}

footer .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#description h1 {
    margin-top: 20px;
    font-size: 1.26rem;
    color: white;
}

p#createdby a {
    color: white;
}

.exteriorbox {
    padding: 5px;
}

.cardbox {
    padding: 20px;
    border: 1px solid lightgray;
    border-radius: 5px;
    height: 100%;
    background-color: white;
}

.capitol {
    margin-bottom: 50px;
    padding-bottom: 20px;
    border-bottom: 1px solid #f1f1f1;
}

.capitol h6 {
    text-transform: uppercase;
}

.capitol ul {
    padding: 0;
    list-style: none;
}

@media (max-width: 768px) {
    .btn-group {
        display: flex;
        justify-content: center;
    }
    .text-box-area {
        margin: 20px 15px;
    }
    #list-example {
        text-align: center;
    }
}

@media (max-width: 576px) {
    ul.navigation li {
        float: right;
    }
}

@media (max-width: 576px) {
    .basetop {
        display: none;
    }
    ul.navigation li {
        display: block;
        font-size: 20px;
        text-align: center;
        margin-right: 0px;
    }
    ul.navigation li img {
        margin-bottom: 10px;
        ;
    }
    ul.navigation {
        padding: 15px 0;
    }
    .headpicture {
        /*        display: none;*/
        background: url('');
        height: auto;
        background-color: #888888;
        color: darkgray;
        text-shadow: none;
    }
    .headpicture_mobile {
        display: block;
        height: 26vh;
        width: 100%;
        background: url('assets/landscape.jpg');
        background-repeat: no-repeat;
        /*    background-attachment: fixed;*/
        background-position: center;
        background-size: cover;
        border-bottom: none;
    }
    #description {
        text-align: center;
        font-size: 20px;
    }
    #description h1 {
        margin-top: 20px;
        font-size: 1.1rem;
        color: rgb(94, 94, 94);
        color: white;
    }
}

@media (max-width: 1000px) {
    .headpicture {
        /*        height:200px;*/
        /*        display: none;*/
    }
    ul.navigation li {
        display: block;
    }
    footer .container {
        display: block;
        justify-content: center;
    }
    footer {
        text-align: center;
    }
    .right {
        float: none;
    }
}

@media (max-width: 1200px) {
    ul#fbbutton {
        padding: 0 0 15px 0;
        margin: 0 auto;
        text-align: center;
    }
    ul#fbbutton li {
        text-align: center;
    }
}

.comingsoon {
    color: #aba6a6;
}

